--- a/README.me
+++ b/README.me
@@ -1,17 +1,28 @@
-This is the new base framework for rnbinfo.
-It used spring framework.
+This is an integration spring framework for java project.
+Anyone can use it for free and conveniently with confirmed version of components.
 
 Component:
+Support spring cloud
 Mybatis page helper
 Authorized by login token
 Uniform dao handler
 Uniform service handler
+Uniform exception handler
 Common tools util
 
 Dependency:
+Version 0.1.0 and up
+Spring boot 2.3.9
+Mybatis 2.1.3
+Rabbitmq 
+Redis
+Swagger 3.0
+
+Version below 0.1.0
 Spring boot 2.1.13
-Mybatis
+Mybatis 2.0
 Rabbitmq
 Redis
+Swagger 2.0
 Lombok
 
