--- a/README.me
+++ b/README.me
@@ -12,13 +12,16 @@ Common tools util
 
 Dependency:
 Version 0.1.0 and up
+JDK 11
 Spring boot 2.3.9
+Spring cloud Hoxton.SR10
 Mybatis 2.1.3
 Rabbitmq 
 Redis
 Swagger 3.0
 
 Version below 0.1.0
+JDK 8
 Spring boot 2.1.13
 Mybatis 2.0
 Rabbitmq
