--- a/README.me
+++ b/README.me
@@ -13,8 +13,8 @@ Common tools util
 Dependency:
 Version 0.1.0 and up
 JDK 11
-Spring boot 2.3.9
-Spring cloud Hoxton.SR10
+Spring boot 2.3.10
+Spring cloud Hoxton.SR11
 Mybatis 2.1.3
 Rabbitmq 
 Redis
@@ -29,3 +29,4 @@ Redis
 Swagger 2.0
 Lombok
 
+Support by [Intellij JetBrains](https://jb.gg/OpenSource)
